--- a/index.html
+++ b/index.html
@@ -6,14 +6,22 @@
 </head>
 
 <body>
-    <h1>Maryam Samani</h1>
-    <img src="maryam.jpeg" alt="This is my image" style="width:300px;height:350px;">
+    <h1>Maryam and Data base, SQl, tableau </h1>
+    <img src="maryam.jpeg" alt="" style="width:250px;height:250px;">
+    <img src="sql.jpeg" alt="" style="width:250px;height:250px;">
+    <img src="index.jpeg" alt="" style="width:250px;height:250px;">
 
     <h4>Project details</h4>
-    <p> in this activity we trying to use Sql query to explore data from data.</p>
-    <br>
-    <br>
+    <p> During these projects i have applied Sql querys to explore sakila database and find the answer of  analying questions. </p>
+    <p>  I use Sql alchemy libraray in python to intract with  hawaii.sqlite database and Analysis and Explor the  Climate for Hawaii,and visualized with  matplotlib .</p>
+    <p>  I use tableau to make dashboard from the 3 diffrent profit analysis on supper sotre file. </p>
 
+    <br>
+    Details:
+
+    <br>
     <ul>
       <li><a href="https://github.com/Maryam-data/SQl_project/blob/master/sql.sakila.sql" target="_blank">SQl_project</a></li>
+      <li><a href="https://github.com/Maryam-data/SQl_project/blob/master/sql.sakila.sql" target="_blank">SQl_alchemy_python</a></li>
+      <li><a href="https://github.com/Maryam-data/SQl_project/blob/master/sql.sakila.sql" target="_blank">profit dashboard</a></li>
     </ul>
