--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 
     <br>
     Details:
+    you can see the readme for each project in their folder in my github page. 
 
     <br>
     <ul>
       <li><a href="https://github.com/Maryam-data/SQl_project/blob/master/sql.sakila.sql" target="_blank">SQl_project</a></li>
-      <li><a href="https://github.com/Maryam-data/SQl_project/blob/master/sql.sakila.sql" target="_blank">SQl_alchemy_python</a></li>
-      <li><a href="https://github.com/Maryam-data/SQl_project/blob/master/sql.sakila.sql" target="_blank">profit dashboard</a></li>
+      <li><a href="https://github.com/Maryam-data/SQl-Alchemy/blob/master/climate_starter.ipynb" target="_blank">SQl_alchemy_python</a></li>
+      <li><a href="https://github.com/Maryam-data/SQl_queryproject/blob/master/tablue.pdf" target="_blank">profit dashboard</a></li>
     </ul>
