--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <p> During these projects i have applied Sql querys to explore sakila database and find the answer of  analying questions. </p>
     <p>  I use Sql alchemy libraray in python to intract with  hawaii.sqlite database and Analysis and Explor the  Climate for Hawaii,and visualized with  matplotlib .</p>
     <p>  I use tableau to make dashboard from the 3 diffrent profit analysis on supper sotre file. </p>
+    <p>  I use the bootsrap and java script to bulit this dashboard,and created individual pages for each plot,These pages will contain the visualizations and their corresponding explanations  </p>
+
+
 
     <br>
     Details:
@@ -25,4 +28,9 @@
       <li><a href="https://github.com/Maryam-data/SQl_project/blob/master/sql.sakila.sql" target="_blank">SQl_project</a></li>
       <li><a href="https://github.com/Maryam-data/SQl-Alchemy/blob/master/climate_starter.ipynb" target="_blank">SQl_alchemy_python</a></li>
       <li><a href="https://github.com/Maryam-data/SQl_queryproject/blob/master/tablue.pdf" target="_blank">profit dashboard</a></li>
+      <li><a href="https://maryam-data.github.io/index.html" target="_blank">Latitude Analysis Dashboard </a></li>
+
     </ul>
+
+  </body>
+  </html>
